--- a/uoft_alert/user/app.css
+++ b/uoft_alert/user/app.css
@@ -2,20 +2,13 @@
 /*override all text font so it is arial*/ 
 html *{
    font-family: arial !important;
-   font-weight: bold !important;
 }
-
-
-html {
-    	background-color: #c7c5c6; 
-	}
-
 
 #title, #status_clear, #status_progress{
     margin-top: 10px;
     text-align: center;
     font-weight: bold;
-    font-size: 20pt;
+    font-size: 25pt;
 
     margin-bottom: 20px;
 }
@@ -37,6 +30,7 @@ iframe{
 }
 
 #alert_date_container{
+    margin-left: -5%;
     margin-right: 5%;
 }
 
@@ -49,8 +43,6 @@ iframe{
 }
 
 #alert_date_text, #alert_time_text{
-    border: 2px solid black;
-    border-radius: 15px;
     padding: 5px;
 }
 
@@ -65,33 +57,26 @@ iframe{
     margin-bottom: 20px;
 }
 
-#description_container{
-    margin-left: 10px;
+#alert_date_label, #alert_time_label, #situation_map, #description_label{
+    font-weight: bold;
 }
 
-#alert_date_label, #alert_time_label, #situation_map, #description_label{
-    font-style: italic;
+#description_container{
+    margin: 20px;
 }
+
 #description_text{
     margin-top: 10px;
-    border: 2px solid black;
-    border-radius: 5px;
-    padding: 5px;
 }
-
-
-
 
 /*
 ========== Extra formatting due to device type: Smart Phone ==========
 */
 
-
-
 /* Smart Phone - Portrait */
 @media only screen and (min-device-width: 320px) and (max-device-width: 700px) and (orientation: portrait) {    
 	#title, #status_clear, #status_progress{
-        color: red;
+        color: #8b0000;
     }
     
     #status_clear{
@@ -101,19 +86,22 @@ iframe{
     #status_progress{
         margin-top: 0px;
         font-size: 15pt;
-        font-style: italic;
     }
     #title{
+        margin-top: 20px;
         margin-bottom: 0px;
-        color: black;
-    }
+        color: navy;
+    }	
+}
 
-	
+img{
+    height: 15px;
+    width: 15px;
+    margin-right: 10px;
 }
 
 /* Smart Phone - Landscape */
 @media only screen and (min-device-width: 320px) and (max-device-width: 740px) and (orientation: landscape) {
-
     #title, #status_clear, #status_progress{
         color: green;
     }
@@ -131,5 +119,4 @@ iframe{
         margin-bottom: 0px;
         color: black;
     }
-	
 }
