--- a/uoft_alert/user/app.css
+++ b/uoft_alert/user/app.css
@@ -88,9 +88,9 @@ iframe{
         font-size: 15pt;
     }
     #title{
-        margin-top: 20px;
+        margin-top: 30px;
         margin-bottom: 0px;
-        color: navy;
+        color: #000066;
     }	
 }
 
