Home screen minor changes

--- a/uoft_alert/user/home.css
+++ b/uoft_alert/user/home.css
@@ -5,7 +5,7 @@ html *{
 }
 
 html {
-    	background: url("./iphone_lock_screen.png") no-repeat center fixed; 
+    	background: url("./iphone_lock_screen.jpg") no-repeat center fixed; 
     	background-size: cover;
 	}
 /*
